# full-stack-fastapi-postgresql

./: README.md  cookiecutter.json
{{cookiecutter.project_slug}}/: .env  README.md  cookiecutter-config-file.yml  docker-compose.override.yml  docker-compose.yml
{{cookiecutter.project_slug}}/backend/app/: pyproject.toml
{{cookiecutter.project_slug}}/backend/app/app/: backend_pre_start.py  tests_pre_start.py  utils.py
{{cookiecutter.project_slug}}/backend/app/app/api/api_v1/endpoints/: items.py  login.py
{{cookiecutter.project_slug}}/backend/app/app/core/: config.py
{{cookiecutter.project_slug}}/backend/app/app/crud/: crud_user.py
{{cookiecutter.project_slug}}/backend/app/app/db/: session.py
{{cookiecutter.project_slug}}/backend/app/app/tests/: conftest.py
{{cookiecutter.project_slug}}/frontend/: .env  Dockerfile
{{cookiecutter.project_slug}}/gateway/: Dockerfile  common.conf  proxy.conf
{{cookiecutter.project_slug}}/gateway/conf.d/: default.conf
