[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Admin <admin@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
uvicorn = "^0.22.0"
fastapi = "^0.100.0"
python-multipart = "^0.0.6"
email-validator = "^2.0.0"
requests = "^2.31.0"
celery = "^5.3.1"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
tenacity = "^8.2.2"
pydantic = "^2.0.3"
pydantic-settings = "^2.0.2"
emails = "^0.6"
gunicorn = "^20.1.0"
jinja2 = "^3.1.2"
alembic = "^1.11.1"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
asyncpg = "^0.27.0"
httpx = "^0.24.1"
SQLAlchemy = "^2.0.16"

[tool.poetry.dev-dependencies]
mypy = "^1.3.0"
black = "^23.3.0"
isort = "^5.12.0"
autoflake = "^2.1.1"
flake8 = "^6.0.0"
pytest = "^7.3.2"
sqlalchemy-stubs = "^0.4"
pytest-cov = "^4.1.0"
pytest-asyncio = "^0.21.0"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
line_length = 88
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

